[package]
name = "chatgpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
curl = "0.4.44"
futures = "0.3.28"
rustyline = "12.0.0"
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
