[package]
name = "simple-chatgpt"
version = "0.1.0"
authors = ["Satoshi Ogata <satosystems@gmail.com>"]
edition = "2021"
rust-version = "1.71.0"
description = "This crate is a simple ChatGPT library for chatbot and CLI tool using this library."
readme = "README.md"
repository = "https://github.com/satosystems/simple-chatgpt/"
license-file = "LICENSE"
keywords = ["chatbot", "chatgpt", "cli"]
categories = ["ai", "chatbot", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
curl = "0.4.44"
futures = "0.3.28"
rustyline = "12.0.0"
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
